@@ -1,3 +1,4 @@
+8/3/11 align two-atom molecule with E-field
 8/2/11 change Bond.dipoleMagnitude to Bond.deltaElectronegativity, since this is really what it is
 8/2/11 revert work done on making dipole a vector, introduced many problems and seems redundant
 8/2/11 hide View controls that are not relevant to a tab
